[gd_scene load_steps=11 format=3 uid="uid://ccqa7mttvtffe"]

[ext_resource type="Script" path="res://First_Person_Package/fps_controller/abilities/shoot/shoot.gd" id="1_usqvv"]
[ext_resource type="PackedScene" uid="uid://caw3udkdenyww" path="res://Characters/Enemy_Resources/dumb_grunt/Bullet/762_round.tscn" id="2_6lrw0"]
[ext_resource type="AudioStream" uid="uid://wurmo7bhfkfd" path="res://First_Person_Package/fps_controller/abilities/shoot/audio/shoot.wav" id="2_xm6ji"]
[ext_resource type="AudioStream" uid="uid://b5jknt70mvwwm" path="res://First_Person_Package/fps_controller/abilities/shoot/audio/bang.wav" id="3_02ytr"]
[ext_resource type="PackedScene" uid="uid://bfvv6upkdjux2" path="res://Assets_and_textures/Weapons/AKM_OBJ/akm_obj_scene.tscn" id="3_jaapq"]
[ext_resource type="PackedScene" uid="uid://ie2hmamv3uoi" path="res://Characters/Players/rigid_bullet.tscn" id="3_oe0dc"]
[ext_resource type="AudioStream" uid="uid://x5mjykmn3yqk" path="res://First_Person_Package/fps_controller/abilities/shoot/audio/trigger.wav" id="4_blmlp"]
[ext_resource type="AudioStream" uid="uid://dyuuk1xumppep" path="res://First_Person_Package/fps_controller/abilities/shoot/audio/shell.wav" id="5_j3sc6"]
[ext_resource type="AudioStream" uid="uid://dawjk4vcd5lv7" path="res://First_Person_Package/fps_controller/abilities/shoot/audio/reload.wav" id="6_j51q0"]

[sub_resource type="BoxMesh" id="BoxMesh_mhgbn"]
size = Vector3(0.01, 0.01, 0.01)

[node name="Shoot" type="Marker3D"]
script = ExtResource("1_usqvv")
bullet_762 = ExtResource("2_6lrw0")
rigid_bullet = ExtResource("3_oe0dc")

[node name="BulletSpread" type="Marker3D" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="BulletSpread"]
target_position = Vector3(0, 0, -100)

[node name="Position3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, -0.1, -0.2)

[node name="AKM_scene" parent="Position3D" instance=ExtResource("3_jaapq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0971832, 0)
cast_shadow = 0

[node name="Bullet_Coords" type="MeshInstance3D" parent="Position3D/AKM_scene"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.151032, -0.0645715, -0.58)
visible = false
cast_shadow = 0
mesh = SubResource("BoxMesh_mhgbn")

[node name="Control" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AmmoBackground1" type="ColorRect" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 476.0
offset_top = 290.0
offset_right = 508.0
offset_bottom = 295.0
color = Color(0, 0, 0, 1)

[node name="AmmoBackground2" type="ColorRect" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 477.0
offset_top = 291.0
offset_right = 507.0
offset_bottom = 294.0
color = Color(0.25, 0.25, 0.25, 1)

[node name="AmmoLeft" type="ColorRect" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 477.0
offset_top = 291.0
offset_right = 507.0
offset_bottom = 294.0

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xm6ji")
volume_db = -15.0
max_polyphony = 100

[node name="BangSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_02ytr")
volume_db = -25.0
max_polyphony = 100

[node name="TriggerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_blmlp")
volume_db = -10.0
max_polyphony = 100

[node name="ShellSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_j3sc6")
volume_db = -20.0
max_polyphony = 100

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_j51q0")
volume_db = -10.0
max_polyphony = 100

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoilStabilizationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
